# velvetwire

./: LICENSE-MIT  README.md  biome.json  package.json  vite.config.js
.github/workflows/: ci.yml  release.yml
src/: app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity.rs  lib.rs  main.rs
src/lib/: types.ts  utils.ts
src/lib/components/: DetailsPanel.svelte  PresetBar.svelte  SectionHeader.svelte  SettingsPanel.svelte
src/lib/i18n/: en.ts  index.ts
src/lib/stores/: activity.svelte.ts  presets.svelte.ts
src/routes/: +layout.svelte  +page.svelte  layout.css
