[package]
name = "velvetwire"
version = "0.1.0"
description = "Desktop app for custom Discord Rich Presence"
authors = ["FortiBrine"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/FortiBrine/velvetwire"

[lib]
name = "velvetwire_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }
discord-presence = { version = "3.2.0", features = ["unstable_name"] }
